# melem-smart-contract

contract/src/: constants.rs  error.rs  main.rs  utils.rs
tests-manual/gas-and-size/: Cargo.toml
tests-manual/gas-and-size/src/: main.rs
