[package]
name = "gas-and-size"
version = "0.1.0"
edition = "2021"
authors = ["Joe Sacher <joe@casperlabs.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-engine-test-support = { git = "https://github.com/casper-network/casper-node.git", branch = "release-1.4.13"}
casper-execution-engine = { git = "https://github.com/casper-network/casper-node.git", branch = "release-1.4.13"}
casper-hashing = { git = "https://github.com/casper-network/casper-node.git", branch = "release-1.4.13"}
casper-types = { git = "https://github.com/casper-network/casper-node.git", branch = "release-1.4.13"}
lmdb = "0.8.0"
humantime = "2"
filesize = "0.2.0"
log = "0.4.14"
num-rational = "0.4.0"
num-traits = "0.2.14"
once_cell = "1.8.0"
rand = "0.8.4"
serde = { version = "1", features = ["derive", "rc"] }
toml = "0.5.6"
tempfile = "3"
blake2 = { version = "0.9.0", default-features = false }
clap = {version = "4.0.18", features = ["derive"] }
